k8s-yamls-master/k8s-yamls-master/live/All-Clusters-BASE-REQUIRED/monitoring/custom/prometheus-serviceMonitorCalico.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: calico-node
  name: calico-node
  namespace: kube-system
spec:
  selector:
    k8s-app: calico-node
  type: ClusterIP
  ports:
  - port: 9091
    protocol: TCP
    targetPort: 9091
    name: metrics
