k8s-yamls-master/k8s-yamls-master/live/All-Clusters-BASE-REQUIRED/monitoring/custom/netpol.yaml
# deny-from-other-namespaces
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
# Allow nginx-ingress to grafana
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.grafana.tcp3000
  namespace: monitoring
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 3000
        protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
  - Ingress
# Allow nginx-ingress to prometheus
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.prometheus.tcp9090
  namespace: monitoring
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 9090
        protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Ingress
